force-app/main/default/objects/Configuration_Switch__mdt/Configuration_Switch__mdt.object-meta.xml
<CustomObject>
    <description>Metadatos para controlar la ejecución de los triggers</description>
    <label>Configuration Switch</label>
    <pluralLabel>Configuration Switch</pluralLabel>
</CustomObject>