force-app/main/default/objects/Configuration_Switch__mdt/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica si el trigger está activo o no</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>