force-app/main/default/objects/Configuration_Switch__mdt/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <description>Descripción del trigger</description>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>