force-app/main/default/objects/Configuration_Switch__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Nombre del trigger</description>
    <label>Nombre de Trigger Setup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>